--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,40 @@
     font-family: "Concert One", sans-serif;
 }
 
+.login-btn {
+  position: relative;
+  background: #0e0e0e;
+  background-size: 400%;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: var(--size, 1rem);
+  font-weight: 500;
+  height: 2.5rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.login-button:hover::before {
+  transform: scaleX(1);
+}
+
+.shimmer {
+  background: linear-gradient(120deg, #e7e8ea 20%, #ffffff 30%, #e7e8ea 40%);
+  background-size: 200% 100%;
+  animation: shimmer 2s infinite linear;
+  filter: blur(1px);
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
+
 /* animation effects */
 
 @keyframes slideDown {
@@ -24,4 +58,244 @@
 
 .slide-down {
   animation: slideDown 0.5s ease-out;
+}
+
+@keyframes bounceDown {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  60% {
+    transform: translateY(20px);
+    opacity: 1;
+  }
+  75% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.bounce-down {
+  animation: bounceDown 0.6s ease-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in forwards;
+}
+
+@keyframes slideRight {
+  from {
+    transform: translateX(50px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-right {
+  animation: slideRight 0.5s ease-out;
+}
+
+/* toggle buttons veg/non-veg*/
+.toggle-border,
+.toggle-border-main-veg,
+.toggle-border-main-nonveg {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+}
+
+.toggle-border input[type="checkbox"],
+.toggle-border-main-veg input[type="checkbox"],
+.toggle-border-main-nonveg input[type="checkbox"] {
+  display: none;
+}
+
+/* Base styles for labels */
+.toggle-border label,
+.toggle-border-main-veg label,
+.toggle-border-main-nonveg label {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+  background: #f5f2f2;
+  border-radius: 80px;
+  cursor: pointer;
+  box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  transition: background 0.5s;
+}
+
+.toggle-border {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+}
+
+.toggle-border-main-veg {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+}
+
+.toggle-border-main-nonveg {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+}
+
+.toggle-border input[type="checkbox"] {
+  display: none;
+}
+
+.toggle-border-main-veg input[type="checkbox"] {
+  display: none;
+}
+
+.toggle-border-main-nonveg input[type="checkbox"] {
+  display: none;
+}
+
+.toggle-border label {
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 13px;
+  background: #f5f2f2;
+  border-radius: 80px;
+  cursor: pointer;
+  box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  transition: background 0.5s;
+}
+
+.toggle-border-main-veg label {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+  background: #f5f2f2;
+  border-radius: 80px;
+  cursor: pointer;
+  box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  transition: background 0.5s;
+}
+
+.toggle-border-main-nonveg label {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 20px;
+  background: #f5f2f2;
+  border-radius: 80px;
+  cursor: pointer;
+  box-shadow: inset 0 0 16px rgba(0, 0, 0, 0.3);
+  transition: background 0.5s;
+}
+
+.handle-veg,
+.handle-nonVeg {
+  position: absolute;
+  top: -6px;
+  left: -10px;
+  width: 26px;
+  height: 26px;
+  background-color: white;
+  border-radius: 20%;
+  box-shadow: 3px 5px 10px 0 rgba(0, 0, 0, 0.4);
+  transition: left 0.4s;
+}
+
+.handle-main-veg {
+  position: absolute;
+  top: -8px;
+  left: -10px;
+  width: 35px;
+  height: 35px;
+  background-color: white;
+  border-radius: 20%;
+  box-shadow: 3px 5px 10px 0 rgba(0, 0, 0, 0.4);
+  transition: left 0.4s;
+}
+
+.handle-main-nonveg {
+  position: absolute;
+  top: -8px;
+  left: -10px;
+  width: 35px;
+  height: 35px;
+  background-color: white;
+  border-radius: 20%;
+  box-shadow: 3px 5px 10px 0 rgba(0, 0, 0, 0.4);
+  transition: left 0.4s;
+}
+
+.handle-veg {
+  border: 3px solid green;
+}
+
+.handle-nonVeg {
+  border: 3px solid red;
+}
+
+.handle-main-veg {
+  border: 3px solid green;
+}
+
+.handle-main-nonveg {
+  border: 3px solid red;
+}
+
+.toggle-border input[type="checkbox"]:checked + label.veg-label {
+  background: rgb(112, 216, 112);
+}
+
+.toggle-border input[type="checkbox"]:checked + label.non-veg-label {
+  background: rgb(247, 83, 83);
+}
+
+.toggle-border-main-veg input[type="checkbox"]:checked + label {
+  background: rgb(112, 216, 112);
+}
+
+.toggle-border-main-nonveg input[type="checkbox"]:checked + label {
+  background: rgb(243, 138, 138);
+}
+
+.toggle-border input[type="checkbox"]:checked + label .handle-veg {
+  left: calc(100% - 20px);
+}
+
+.toggle-border input[type="checkbox"]:checked + label .handle-nonVeg {
+  left: calc(100% - 20px);
+}
+
+.toggle-border-main-veg
+  input[type="checkbox"]:checked
+  + label
+  .handle-main-veg {
+  left: calc(100% - 20px);
+}
+
+.toggle-border-main-nonveg
+  input[type="checkbox"]:checked
+  + label
+  .handle-main-nonveg {
+  left: calc(100% - 20px);
 }
