--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
     font-family: "Concert One", sans-serif;
 }
 
+.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+
 .login-btn {
   position: relative;
   background: #0e0e0e;
@@ -123,6 +129,23 @@
 .slide-right {
   animation: slideRight 0.5s ease-out;
 }
+
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.zoom-in {
+  animation: zoomIn 0.5s ease-in;
+}
+
 
 /* toggle buttons veg/non-veg*/
 .toggle-border,
@@ -314,3 +337,108 @@
   .handle-main-nonveg {
   left: calc(100% - 20px);
 }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse {
+  animation: pulse 1s infinite;
+}
+
+.add-btn-hover-pulse:hover {
+  animation: pulse 1s infinite;
+}
+
+
+@keyframes bounce-in {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(-10px);
+    opacity: 1;
+  }
+  70% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes bounce-out {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateY(-10px);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+}
+
+.toaster {
+  position: fixed;
+  bottom: 0;
+  background-color: #f97316;
+  color: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  z-index: 10;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.toaster-enter {
+  animation: bounce-in 0.3s ease-out;
+}
+
+.toaster-exit {
+  animation: bounce-out 0.4s ease-in;
+}
+
+
+@keyframes backAndForth {
+  0%,
+  100% {
+    transform: translateX(0); /* Start and end at the original position */
+  }
+  50% {
+    transform: translateX(5px); /* Move to the right */
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg); /* Start at 0 degrees */
+  }
+  100% {
+    transform: rotate(360deg); /* Rotate a full circle */
+  }
+}
+
+.rotate {
+  animation: rotate 20s linear infinite; /* Apply the rotating animation infinitely */
+}
+
+.back-and-forth {
+  animation: backAndForth 1s infinite ease-in-out; /* Apply the animation infinitely */
+}
+
+
