--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,46 @@
   overflow: hidden;
 }
 
+/* login button */
+.login-button {
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  height: 2.5rem;
+  background: #0e0e0e;
+  background-size: 400%;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  font-size: var(--size, 1rem);
+  font-weight: 500;
+}
+
+
+
+.button-content {
+  position: relative;
+  z-index: 1;
+}
+
+.login-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  width: 100%;
+  height: inherit;
+  border-radius: inherit;
+  background: linear-gradient(
+    82.3deg,
+    rgba(150, 93, 233, 1) 10.8%,
+    rgba(99, 88, 238, 1) 94.3%
+  );
+  transition: all 0.475s;
+}
+
 .login-button:hover::before {
   transform: scaleX(1);
 }
@@ -411,6 +451,29 @@
 
 .toaster-exit {
   animation: bounce-out 0.4s ease-in;
+}
+
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+.btn-bounce {
+  animation: bounce 4s infinite;
+}
+
+.delay-1 {
+  animation-delay: 1s;
+}
+
+.delay-2 {
+  animation-delay: 0.5s;
 }
 
 
